Updated JS and menu links

--- a/bsg_people_app/templates/people.j2
+++ b/bsg_people_app/templates/people.j2
@@ -1,5 +1,5 @@
 <html>
-
+<!-- Adapted from the people.html UI design -->
 <head>
 	<title>People</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
@@ -12,27 +12,27 @@
 		if(dowhat == 'insert') {
 			document.getElementById('browse').style.display = 'none';
 			document.getElementById('insert').style.display = 'block';
-			document.getElementById('update').style.display = 'none';
+			document.getElementById('edit').style.display = 'none';
 			document.getElementById('delete').style.display = 'none';
 		} else if(dowhat == 'update') {
 			document.getElementById('browse').style.display = 'none';
 			document.getElementById('insert').style.display = 'none';
-			document.getElementById('update').style.display = 'block';
+			document.getElementById('edit').style.display = 'block';
 			document.getElementById('delete').style.display = 'none';
 		} else if(dowhat == 'delete') {
 			document.getElementById('browse').style.display = 'none';
 			document.getElementById('insert').style.display = 'none';
-			document.getElementById('update').style.display = 'none';
+			document.getElementById('edit').style.display = 'none';
 			document.getElementById('delete').style.display = 'block';
 		} else if(dowhat == 'all') {
 			document.getElementById('browse').style.display = 'block';
 			document.getElementById('insert').style.display = 'block';
-			document.getElementById('update').style.display = 'block';
+			document.getElementById('edit').style.display = 'block';
 			document.getElementById('delete').style.display = 'block';
 		} else { //by default display browse
 			document.getElementById('browse').style.display = 'block';
 			document.getElementById('insert').style.display = 'none';
-			document.getElementById('update').style.display = 'none';
+			document.getElementById('edit').style.display = 'none';
 			document.getElementById('delete').style.display = 'none';
 		}
 	}
@@ -60,9 +60,9 @@
 </head>
 
 <body onload="browsePeople()">
-	<h1>People</h1> [ <a href="planets.html">Planets</a> | <a href="people">People</a> | Certifications | People Certified ]
+	<h1>People</h1> [ Planets | <a href="people">People</a> | Certifications | People Certified ]
 	<div id="browse">
-		<p><a href="#" onClick="showAll()">Display all forms</a> </p>
+		<p><a href="#" onClick="newPerson()">Add New</a> </p>
 		<table border="1" cellpadding="5">
             <!-- Access data tuple passed from app.py --> 
             {% if data %}
@@ -97,9 +97,8 @@
                 {% endif %} 
         </table>   
 	<p>&nbsp;</p>
-	</div>
+	</div>	<!-- browse -->
 
-	<!-- browse -->
 	<div id="insert">
 		<!-- form to INSERT new data into bsg_people-->
 		<form id="insertPerson" action="/people" method="post">
@@ -114,14 +113,10 @@
 
 				<label for="year">homeworld:</label>
 				<select class="form-control" id="homeworld" name="homeworld" pattern="[0-4]{1}" placeholder="" required>
-                        <!-- null homeworld option -->
-                        <option value="0">&nbsp;</option>
-						<!-- Access our homeworld tuple passed from app.py to generate our homeworlds dropdown-->
-                        {% for homeworld in homeworlds %}
-							<option value="{{ homeworld['id'] }}"> {{homeworld['name']}}</option> 
-                                
-                        <!-- End of this for loop -->
-                        {% endfor %} 
+					<option value="0">&nbsp;</option>
+					<option value="1">Gemenon</option>
+					<option value="2">Leonis</option>
+					<option value="3">Caprica</option>
 				</select>
 
 				<label for="color">age:</label>
@@ -132,7 +127,7 @@
 			<input type="submit" value="Add Person" name="Add_Person" class="btn btn-primary" style="margin:.5rem;">
 			<input class="btn" type="button" value="Cancel" onClick="browsePeople()"> 
         </form>
-
+	</div><!--insert-->
 	<div id="edit">
 		<!-- form to edit data in bsg_people-->
 		<form id="editPerson" action="/edit_people/{{data[0].id}}" method="post">
@@ -141,24 +136,22 @@
 				<input type="hidden" value="{{data[0].id}}" class="form-control" id="personID" name="personID" required>
 				<label for="make">first name:</label>
 
-				<input type="text" class="form-control" id="fname" name="fname" pattern="[A-Za-z]{1,}" placeholder="" required>
+				<input type="text" class="form-control" id="fname" name="fname" pattern="[A-Za-z]{1,}" placeholder="{{data[0].fname}}" required>
 				<label for="model">last name:</label>
 
-				<input type="text" class="form-control" id="lname" name="lname" pattern="[A-Za-z0-9]{1,}" placeholder="" required>
+				<input type="text" class="form-control" id="lname" name="lname" pattern="[A-Za-z0-9]{1,}" placeholder="{{data[0].lname}}" required>
 				<label for="year">homeworld:</label>
 
 				<select class="form-control" id="homeworld" name="homeworld" pattern="[0-4]{1}" placeholder="" required>
-                        <!-- Access our homeworld tuple passed from app.py-->
-                        <option value="0">&nbsp;</option>
-                        {% for homeworld in homeworlds %}
-							<option value="{{ homeworld['id'] }}"> {{homeworld['name']}}</option> 
-                                
-                        <!-- End of this for loop -->
-                        {% endfor %} 
+					<option value="0">&nbsp;</option>
+					<option value="1">Gemenon</option>
+					<option value="2">Leonis</option>
+					<option value="3">Caprica</option>
+					<option value="{{data[0].homeworld}}" selected></option>
 				</select>
 
 				<label for="color">age:</label>
-				<input type="text" class="form-control" id="age" name="age" pattern="[A-Za-z0-9]{1,}" placeholder="" required> </fieldset>
+				<input type="text" class="form-control" id="age" name="age" pattern="[A-Za-z0-9]{1,}" placeholder="{{data[0].age}}" required> </fieldset>
 				<input class="btn" type="button" value="Cancel" onClick="browsePeople()" style="margin:.5rem;"> 
         </form>
 	</div><!--edit-->
