fixed cancel button

--- a/bsg_people_app/templates/edit_people.j2
+++ b/bsg_people_app/templates/edit_people.j2
@@ -75,7 +75,7 @@
                 
                 </fieldset>
                 <input type="submit" value="Edit Person" name="Edit_Person" class="btn btn-primary" style="margin:.5rem;">
-                <input class="btn" type="button" value="cancel" onClick="browsePeople()"> 
+                <a href='/people'><input class="btn" type="button" value="cancel"></a>
             </form>
 
 </html>
