--- a/bsg_people_app/templates/people.j2
+++ b/bsg_people_app/templates/people.j2
@@ -113,6 +113,7 @@
 
 				<label for="year">homeworld:</label>
 				<select class="form-control" id="homeworld" name="homeworld" pattern="[0-4]{1}" placeholder="" required>
+				<!-- these are hard coded, but you can add code to make this dynamic -->
 					<option value="0">&nbsp;</option>
 					<option value="1">Gemenon</option>
 					<option value="2">Leonis</option>
